package com.example.chatapp.models;

import android.graphics.Bitmap;
import android.graphics.BitmapFactory;
import android.util.Base64;

import java.io.Serializable;
import java.util.Date;

public class Users implements Serializable {

    public String name, img, email, token, id;


}
